--- a/_posts/2018-12-18-affe-cn-im.md
+++ b/_posts/2018-12-18-affe-cn-im.md
@@ -4,6 +4,7 @@ title:      "Love Life"
 subtitle:   "我认清生活的真相了马"
 date:       2018-12-18 01:00:00
 author:     "affe"
+header-style : text
 header-img: "img/post-bg-2015.jpg"
 tags:
     - Life
