--- a/_posts/2018-12-18-affe-cn-im.md
+++ b/_posts/2018-12-18-affe-cn-im.md
@@ -1,7 +1,7 @@
 ---
 layout:     post
 title:      "Love Life"
-subtitle:   "我认清生活的真相了马"
+subtitle:   "我认清生活的真相了m吗"
 date:       2018-12-18 01:00:00
 author:     "affe"
 header-style : text
@@ -10,4 +10,4 @@ tags:
     - Life
 ---
 
-## My First Blog And Don't know what to write!
+# My First Blog And Don't know what to write!
