--- a/_posts/2018-12-18-affe-cn-im.md
+++ b/_posts/2018-12-18-affe-cn-im.md
@@ -1,7 +1,7 @@
 ---
 layout:     post
 title:      "Love Life"
-subtitle:   "我认清生活的真相了m吗"
+subtitle:   "我认清生活的真相了吗"
 date:       2018-12-18 01:00:00
 author:     "affe"
 header-style : text
