first blog for affe

--- a/_posts/2018-12-18-affe-cn-im.md
+++ b/_posts/2018-12-18-affe-cn-im.md
@@ -9,5 +9,22 @@ header-img: "img/post-bg-2015.jpg"
 tags:
     - Life
 ---
+# 关于博客的贡献者
 
-# My First Blog And Don't know what to write!
+这个博客来自于知乎用户 huxpro 的私人博客，他是一名前端工程师，用jekyll搭建了一个开源的github pages 博客，这个社区还有一些其他的贡献者，我作为一个索取者，能够方便的搭建这样一个博客，实在是要感谢开源的力量。博客的地址在网站下方的github链接中有，再次表达对开源社区内每个人的无私奉献之感谢。
+
+# 关于社交
+
+建立这个blog的初衷是想着，作为一个立志于成为一名合格的程序员的人，总得装模做样的拥有一个自己的技术博客，把平时乱七八糟写的文档放在上面，还能作为简历里不起眼的一项给别人看看。顺便可以试验一些新的技术——如果我打算自己维护一个服务器的话。
+
+一开始我也的确这样做了，搞了一个简易的django web框架，本以为信心满满的马上就能投入使用了，没想到我对于前端设计一无所知，做出来的网页丑陋不堪。倒不是说我不喜欢简洁的画风。如果它真的简洁明了，我也就心满意足了。然而遇到的各种各样难以修复的问题让我放弃了这个打算。后来还是投入了静态博客的怀抱，感恩github如此良心，做出的博客简洁方便，实在是方便了我这个大懒人。
+
+然而除了技术上的追求，建立这个博客更多是为了满足社交需求。在我自己眼中我是一个话很多的人，在我朋友眼中我是一个废话很多的人，两者有个共同点，都是一定要说很多话才能活下去。世界上就是会有很多截然不同的人，有人要一直说话才能感受到自己的存在，有的人多说一句话就会难受的要死。这样的个体差异不得不说是一种有趣的源泉，前提是你不能把一个话很多的人和一个话很少的人放在一起生活，因为亲身体验告诉我，这样的经历并不有趣，相反会在很长的一段时间内造成至少一个人的痛苦。
+
+在我人生的第一段恋情里，我对自己当时状态的描述就是：铁憨憨。早已经记不清平均今天会在朋友圈发一条那种自以为很帅的动态了，什么三行情书，什么小说里的改编的话，彷佛什么破事都要放到朋友圈上，巴不得让每个人都知道我今天吃了几根面条，并且夸赞我的面条真好吃。后来我才知道，原来我当时处于一种严重的社交焦虑之中，具体表现为，迫切的希望被认同。有一天我突然发现，其实真正愿意了解你的人，可能也就那么几个，你发在朋友圈里，有人匆匆划过，有人心里骂一句这傻逼，有人习惯性点个赞，有人根本不用朋友圈，于是我想，既然我喜欢随心所欲的写些东西，又不愿意所有人都认为我是个矫情的家伙，不如搞一个愿者上钩，你若愿意来能看看我的牢骚话，那说明我们的关系至少不赖，你若不愿意，便一辈子也不会点开这个互联网上的孤岛。我不想让别人觉得我是一个矫情的人——我承认我是一个有时候感性会占上风的人，但是这并不意味着我很矫情。因为矫情与否，取决于你要交流的目标是是谁，正如同夫妻之间说的情话不会被外人听到，自然也就不会有人说他们矫情，但假如你把天天应该在床上说的话发在朋友圈里，别人会觉得这个人有毛病。我自从认识到了这一点之后，就立刻意识到了以前的自己是多么的呆瓜。好在我并不会羞于承认那个不太聪明的自己，那毕竟也是我人生重要的一部分，更何况以前说的那些情话都是千真万确的，否认也没有用，而我所犯的错，无非是，我在错误的地方说了不该说的话，也或许对不该说的人说了她不爱听的话，至于更为本质的问题，我是否爱上了我不该爱的人，我决定将它交给时间去回答。
+
+李宗盛说，旧爱的誓言像极了一个巴掌，每当你记起一句就挨一个耳光。他说得真好。
+
+# 关于周小姐的情话
+
+很抱歉我又提到了我的上一位，好在我的周小姐应该不会在意。我记得有一次我和她走在路上，我突然说，周家琦好惨啊，连前任都没有，没想到这位兄台反手来一句，张雨霏好惨啊，居然有前任。我无奈一笑，你说得好像还真没什么错。鉴于之后我的博客的主要读者就是周小姐，我可能得尽力讨好一下她了。现在我已经很少说出那种肉麻的话了，一方面是有时候太忙，没有功夫去想想，另一方面周小姐似乎也有点不适应，于是乎我干脆只在自己脑海里过一遍，一觉醒来便已忘却所有言语，这样做来倒也不错。唯独有时候和周小姐见面时，会在她耳边说上几句，她也会开心的笑着。之后若有什么肉麻矫情笨比脑残的话，都会先由我的大脑过滤一遍，实在忍不住了，就会发到这上面来，如果有人半夜发春了睡不着觉，可以上来觅食一翻，说不定能满足对自我感动的需求。不过若是你正心烦意乱，不如右上角关闭，好好休息一翻，有兴致时再来翻看不迟。最后我要约法三章，请不要抱着看笑话的心态光临，正如同我所说的，每个人都有 ‘矫情‘’ 的时候，只是天时地利不同而已。此刻，我坚信自己在自己的领地上拥有一切不违反法律和普世道德的任性的权力。你若不喜，关掉便是。
