--- a/_posts/2018-12-19-today.md
+++ b/_posts/2018-12-19-today.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      "万有引力--一"
+title:      "万有引力（一）"
 subtitle:   "探险家张三和刘苟"
 date:       2018-12-18 01:00:00
 author:     "affe"
