change some title

--- a/_posts/2019-8-26-daily.md
+++ b/_posts/2019-8-26-daily.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:     保持愤怒
+title:     Google啊Google
 subtitle:   ""
 date:       2019-8-26 24:00:00
 author:     "affe"
