--- a/_posts/2021-02-06-daily.md
+++ b/_posts/2021-02-06-daily.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      
+title:      小伙子听过David Tao没
 subtitle:   ""
 date:       2021-02-06 12:00:00
 author:     "affe"
